# avro-schema

./: Cargo.toml  README.md
.github/workflows/: coverage.yml  test.yml
examples/: read_file.rs
src/: de.rs  error.rs  file.rs  lib.md  lib.rs  schema.rs  se.rs  write_async.rs
src/read/: block.rs  decode.rs  decompress.rs  mod.rs  utils.rs
src/read_async/: block.rs  decode.rs  mod.rs
src/schema/: de.rs  mod.rs
src/write/: block.rs  compression.rs  encode.rs  file.rs  mod.rs
tests/it/: file.rs  main.rs
