[package]
name = "avro-schema"
version = "0.2.1"
license = "Apache-2.0"
description = "Implementation of Apache Avro spec"
homepage = "https://github.com/DataEngineeringLabs/avro-schema"
repository = "https://github.com/DataEngineeringLabs/avro-schema"
authors = ["Jorge C. Leitao <jorgecarleitao@gmail.com>"]
keywords = [ "avro", "analytics" ]
edition = "2018"

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false }
